added gitignore + config, moved csv to folder data

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -207,7 +207,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load CSV\n",
-    "df = pd.read_csv(\"open-meteo-subset.csv\")\n",
+    "df = pd.read_csv(\"data/open-meteo-subset.csv\")\n",
     "\n",
     "# Quick inspection\n",
     "print(\"Shape:\", df.shape)\n",
