--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AI Usage\n",
+    "## AI Usage and Collaboration\n",
     "\n",
     "During this project, I used AI tools (like ChatGPT) to help plan, debug, and write Streamlit code. Additionally, I received guidance from a fellow student to better understand what the tasks were asking and to handle the initial setup of the Python environment and GitHub connection.\n",
     "\n",
