--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "9                   9.3                  19.5                     284  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -241,95 +241,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that values in the time column are stored as strings. We convert it to datetime."
+    "We see that values in the time column are stored as strings. We convert it to datetime, and do this with the csv in the pages as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape: (8760, 6)\n"
+      "time                      datetime64[ns]\n",
+      "temperature_2m (°C)              float64\n",
+      "precipitation (mm)               float64\n",
+      "wind_speed_10m (m/s)             float64\n",
+      "wind_gusts_10m (m/s)             float64\n",
+      "wind_direction_10m (°)             int64\n",
+      "dtype: object\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>temperature_2m (°C)</th>\n",
-       "      <th>precipitation (mm)</th>\n",
-       "      <th>wind_speed_10m (m/s)</th>\n",
-       "      <th>wind_gusts_10m (m/s)</th>\n",
-       "      <th>wind_direction_10m (°)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-01 00:00:00</td>\n",
-       "      <td>-2.2</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>9.6</td>\n",
-       "      <td>21.3</td>\n",
-       "      <td>284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-01 01:00:00</td>\n",
-       "      <td>-2.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.6</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>282</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 time  temperature_2m (°C)  precipitation (mm)  \\\n",
-       "0 2020-01-01 00:00:00                 -2.2                 0.1   \n",
-       "1 2020-01-01 01:00:00                 -2.2                 0.0   \n",
-       "\n",
-       "   wind_speed_10m (m/s)  wind_gusts_10m (m/s)  wind_direction_10m (°)  \n",
-       "0                   9.6                  21.3                     284  \n",
-       "1                  10.6                  23.0                     282  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Convert time column to datetime\n",
     "df['time'] = pd.to_datetime(df['time'])\n",
     "\n",
-    "# Inspect shape and first few rows\n",
-    "print(\"Shape:\", df.shape)\n",
-    "df.head(2)\n"
+    "# print types to see the change\n",
+    "print(df.dtypes)\n"
    ]
   },
   {
@@ -342,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -368,118 +307,106 @@
        "      <th></th>\n",
        "      <th>count</th>\n",
        "      <th>mean</th>\n",
+       "      <th>std</th>\n",
        "      <th>min</th>\n",
        "      <th>25%</th>\n",
        "      <th>50%</th>\n",
        "      <th>75%</th>\n",
        "      <th>max</th>\n",
-       "      <th>std</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <td>8760</td>\n",
-       "      <td>2020-07-01 11:30:00</td>\n",
-       "      <td>2020-01-01 00:00:00</td>\n",
-       "      <td>2020-04-01 05:45:00</td>\n",
-       "      <td>2020-07-01 11:30:00</td>\n",
-       "      <td>2020-09-30 17:15:00</td>\n",
-       "      <td>2020-12-30 23:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>temperature_2m (°C)</th>\n",
        "      <td>8760.0</td>\n",
        "      <td>-0.394909</td>\n",
+       "      <td>6.711903</td>\n",
        "      <td>-19.3</td>\n",
        "      <td>-4.9</td>\n",
        "      <td>-1.0</td>\n",
        "      <td>4.1</td>\n",
        "      <td>19.9</td>\n",
-       "      <td>6.711903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>precipitation (mm)</th>\n",
        "      <td>8760.0</td>\n",
        "      <td>0.222854</td>\n",
+       "      <td>0.493747</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.2</td>\n",
        "      <td>5.8</td>\n",
-       "      <td>0.493747</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wind_speed_10m (m/s)</th>\n",
        "      <td>8760.0</td>\n",
        "      <td>3.661689</td>\n",
+       "      <td>2.253210</td>\n",
        "      <td>0.1</td>\n",
        "      <td>1.8</td>\n",
        "      <td>3.3</td>\n",
        "      <td>5.1</td>\n",
        "      <td>13.6</td>\n",
-       "      <td>2.25321</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wind_gusts_10m (m/s)</th>\n",
        "      <td>8760.0</td>\n",
        "      <td>8.300719</td>\n",
+       "      <td>5.098909</td>\n",
        "      <td>0.2</td>\n",
        "      <td>4.5</td>\n",
        "      <td>7.7</td>\n",
        "      <td>11.5</td>\n",
        "      <td>28.7</td>\n",
-       "      <td>5.098909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>wind_direction_10m (°)</th>\n",
        "      <td>8760.0</td>\n",
        "      <td>212.209589</td>\n",
+       "      <td>91.371980</td>\n",
        "      <td>0.0</td>\n",
        "      <td>128.0</td>\n",
        "      <td>238.0</td>\n",
        "      <td>292.0</td>\n",
        "      <td>360.0</td>\n",
-       "      <td>91.37198</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         count                 mean                  min  \\\n",
-       "time                      8760  2020-07-01 11:30:00  2020-01-01 00:00:00   \n",
-       "temperature_2m (°C)     8760.0            -0.394909                -19.3   \n",
-       "precipitation (mm)      8760.0             0.222854                  0.0   \n",
-       "wind_speed_10m (m/s)    8760.0             3.661689                  0.1   \n",
-       "wind_gusts_10m (m/s)    8760.0             8.300719                  0.2   \n",
-       "wind_direction_10m (°)  8760.0           212.209589                  0.0   \n",
+       "                         count        mean        std   min    25%    50%  \\\n",
+       "temperature_2m (°C)     8760.0   -0.394909   6.711903 -19.3   -4.9   -1.0   \n",
+       "precipitation (mm)      8760.0    0.222854   0.493747   0.0    0.0    0.0   \n",
+       "wind_speed_10m (m/s)    8760.0    3.661689   2.253210   0.1    1.8    3.3   \n",
+       "wind_gusts_10m (m/s)    8760.0    8.300719   5.098909   0.2    4.5    7.7   \n",
+       "wind_direction_10m (°)  8760.0  212.209589  91.371980   0.0  128.0  238.0   \n",
        "\n",
-       "                                        25%                  50%  \\\n",
-       "time                    2020-04-01 05:45:00  2020-07-01 11:30:00   \n",
-       "temperature_2m (°C)                    -4.9                 -1.0   \n",
-       "precipitation (mm)                      0.0                  0.0   \n",
-       "wind_speed_10m (m/s)                    1.8                  3.3   \n",
-       "wind_gusts_10m (m/s)                    4.5                  7.7   \n",
-       "wind_direction_10m (°)                128.0                238.0   \n",
-       "\n",
-       "                                        75%                  max       std  \n",
-       "time                    2020-09-30 17:15:00  2020-12-30 23:00:00       NaN  \n",
-       "temperature_2m (°C)                     4.1                 19.9  6.711903  \n",
-       "precipitation (mm)                      0.2                  5.8  0.493747  \n",
-       "wind_speed_10m (m/s)                    5.1                 13.6   2.25321  \n",
-       "wind_gusts_10m (m/s)                   11.5                 28.7  5.098909  \n",
-       "wind_direction_10m (°)                292.0                360.0  91.37198  "
+       "                          75%    max  \n",
+       "temperature_2m (°C)       4.1   19.9  \n",
+       "precipitation (mm)        0.2    5.8  \n",
+       "wind_speed_10m (m/s)      5.1   13.6  \n",
+       "wind_gusts_10m (m/s)     11.5   28.7  \n",
+       "wind_direction_10m (°)  292.0  360.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.describe(include=\"all\").transpose()\n"
+    "# Exclude \"time\" column\n",
+    "df_numeric = df.drop(columns=[\"time\"])\n",
+    "df_numeric.describe(include=\"all\").transpose()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are big differences in the ranges, especially with the wind direction. We need to explore this further, potentially scale them."
    ]
   },
   {
@@ -492,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -547,10 +474,7 @@
     }
    ],
    "source": [
-    "# Select numeric columns only, excluding 'time'\n",
-    "numeric_cols = df.select_dtypes(include=\"number\").columns\n",
-    "\n",
-    "for col in numeric_cols:\n",
+    "for col in df_numeric:\n",
     "    plt.figure(figsize=(9,2.5))\n",
     "    plt.plot(df.index, df[col], marker=\".\", linewidth=1)\n",
     "    plt.title(f\"{col} — full series\")\n",
@@ -559,6 +483,13 @@
     "    plt.grid(True, alpha=0.3)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "They look different, and also here we can see the very different scales."
    ]
   },
   {
@@ -586,9 +517,6 @@
     }
    ],
    "source": [
-    "# Select numeric columns only\n",
-    "df_numeric = df.select_dtypes(include=\"number\")\n",
-    "\n",
     "# Normalize numeric columns\n",
     "df_norm = (df_numeric - df_numeric.min()) / (df_numeric.max() - df_numeric.min())\n",
     "\n",
@@ -610,11 +538,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We should add in the possibility to get the plots normalized in the Plot Page."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Streamlit App Overview\n",
     "\n",
     "The project also includes a Streamlit 4-page app:\n",
     "\n",
-    "1. **Home Page**: Title, description, and a preview of the CSV.\n",
+    "1. **Home Page**: Title and description.\n",
     "2. **Data Table Page**: Shows the full dataset and sparklines for the first month of each column.\n",
     "3. **Plot Page**: Interactive plots with dropdown to select columns and a slider to select a time range.\n",
     "4. **About Page**: Documentation and reflections.\n",
@@ -633,11 +568,13 @@
     "\n",
     "Once the setup was complete, I really enjoyed the coding and visualization parts. Working with the CSV data and exploring its contents through both the Jupyter Notebook and Streamlit app was very engaging. Building the interactive Streamlit app, with multiple pages and dynamic visualizations, made it exciting to see the data in different ways and experiment with user interface features like dropdowns, sliders, and sidebar navigation. It was rewarding to watch the app respond to selections and update plots in real time.\n",
     "\n",
-    "Through this project, I learned several key skills: how to structure a multipage Streamlit app effectively, how to read, inspect, and visualize data using Pandas and Matplotlib, and best practices for documenting code in a clear and reproducible way. Beyond the technical aspects, I learned the importance of iterative development—testing ideas, making refinements, and documenting decisions in the notebook so that the project remains understandable and reproducible.\n",
+    "Through this project, I learned several key skills: how to structure a multipage Streamlit app effectively, how to read, inspect, and visualize data using Pandas and Streamlit functions. Beyond the technical aspects, I learned the importance of iterative development—testing ideas, making refinements, and documenting decisions in the notebook so that the project remains understandable and reproducible.\n",
     "\n",
     "This project also highlighted the value of collaboration and external support. Using AI tools and guidance from a fellow student helped me understand the tasks and initial setup, while allowing me to take ownership of the further development and enhancements. Exploring solutions on my own built confidence and gave me a better understanding of how all the pieces—data, code, and interactive visualization—fit together.\n",
     "\n",
-    "Overall, this experience has strengthened my Python skills, improved my ability to create interactive visualizations, and enhanced my understanding of project workflow and documentation. I feel more comfortable combining notebooks and interactive apps, and I now have a clearer idea of how to structure, test, and present a data-driven project effectively.\n"
+    "Overall, this experience has strengthened my Python skills, improved my ability to create interactive visualizations, and enhanced my understanding of project workflow and documentation. I feel more comfortable combining notebooks and interactive apps, and I now have a clearer idea of how to structure, test, and present a data-driven project effectively.\n",
+    "\n",
+    "I still look forward to further learn more about this, as I still feel like it could have gotten more of a personal touch. I will work more with this in further CA projects, exploring more functionalities.\n"
    ]
   }
  ],
