Added home page picture, changed config colors

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -489,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They look different, and also here we can see the very different scales."
+    "We can also see here we can see the very different scales."
    ]
   },
   {
@@ -538,7 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We should add in the possibility to get the plots normalized in the Plot Page."
+    "We will add in the possibility to get the plots normalized in the Plot Page."
    ]
   },
   {
