--- a/jupyter/assignment_4.ipynb
+++ b/jupyter/assignment_4.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "### 2. Spark and Cassandra Connection Test\n",
     "\n",
-    "#### 2.1 Spart set-up"
+    "#### 2.1 Spark set-up"
    ]
   },
   {
@@ -62,13 +62,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 09:02:47 WARN Utils: Your hostname, Sofies-Mac-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.1.3 instead (on interface en0)\n",
-      "25/11/26 09:02:47 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Ivy Default Cache set to: /Users/sofiesveindal/.ivy2/cache\n",
-      "The jars for the packages stored in: /Users/sofiesveindal/.ivy2/jars\n",
-      "com.datastax.spark#spark-cassandra-connector_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-48832ac0-7a7a-43aa-8ce0-34c1b9ae8e03;1.0\n",
-      "\tconfs: [default]\n"
+      "25/11/26 11:04:58 WARN Utils: Your hostname, Sofies-Mac-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.1.3 instead (on interface en0)\n",
+      "25/11/26 11:04:58 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -82,6 +77,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Ivy Default Cache set to: /Users/sofiesveindal/.ivy2/cache\n",
+      "The jars for the packages stored in: /Users/sofiesveindal/.ivy2/jars\n",
+      "com.datastax.spark#spark-cassandra-connector_2.12 added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-b0252c37-6a14-4d62-8c7e-906961185943;1.0\n",
+      "\tconfs: [default]\n",
       "\tfound com.datastax.spark#spark-cassandra-connector_2.12;3.5.1 in central\n",
       "\tfound com.datastax.spark#spark-cassandra-connector-driver_2.12;3.5.1 in central\n",
       "\tfound org.scala-lang.modules#scala-collection-compat_2.12;2.11.0 in central\n",
@@ -98,7 +98,7 @@
       "\tfound org.apache.commons#commons-lang3;3.10 in central\n",
       "\tfound com.thoughtworks.paranamer#paranamer;2.8 in central\n",
       "\tfound org.scala-lang#scala-reflect;2.12.19 in central\n",
-      ":: resolution report :: resolve 354ms :: artifacts dl 13ms\n",
+      ":: resolution report :: resolve 569ms :: artifacts dl 28ms\n",
       "\t:: modules in use:\n",
       "\tcom.datastax.oss#java-driver-shaded-guava;25.1-jre-graal-sub-1 from central in [default]\n",
       "\tcom.datastax.oss#native-protocol;1.5.1 from central in [default]\n",
@@ -122,10 +122,10 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   16  |   0   |   0   |   0   ||   16  |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-48832ac0-7a7a-43aa-8ce0-34c1b9ae8e03\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-b0252c37-6a14-4d62-8c7e-906961185943\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 16 already retrieved (0kB/7ms)\n",
-      "25/11/26 09:02:48 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "\t0 artifacts copied, 16 already retrieved (0kB/11ms)\n",
+      "25/11/26 11:04:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
@@ -287,7 +287,8 @@
     "# Store MongoDB URI\n",
     "MONGO_URI = secrets[\"mongodb\"][\"uri\"]\n",
     "MONGO_DB = secrets[\"mongodb\"][\"database\"]\n",
-    "MONGO_COLLECTION = secrets[\"mongodb\"][\"collection\"]"
+    "MONGO_COLLECTION = secrets[\"mongodb\"][\"collection\"]\n",
+    "MONGO_CONSUMPTION_COLLECTION = \"consumption_hourly\""
    ]
   },
   {
@@ -387,7 +388,7 @@
     "        return final_df\n",
     "        \n",
     "    print(f\"\\nNo data successfully fetched for {dataset_name}.\")\n",
-    "    return pd.DataFrame()"
+    "    return pd.DataFrame()\n"
    ]
   },
   {
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -618,6 +619,7 @@
     "consumption_spark_df = transform_pandas_to_spark_df(consumption_df_raw, spark, 'consumption')\n",
     "\n",
     "\n",
+    "\n",
     "# 2. CONSOLIDATION: Read the old 2021 Production data from the staging table\n",
     "old_production_table = \"production_2021\"\n",
     "try:\n",
@@ -655,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +710,7 @@
     "    PRIMARY KEY (pricearea, starttime)\n",
     ");\n",
     "\"\"\")\n",
-    "print(f\"Target Cassandra tables '{production_table_name}' and '{consumption_table_name}' explicitly dropped and re-created with the correct schema.\")"
+    "print(f\"Target Cassandra tables '{production_table_name}' and '{consumption_table_name}' explicitly dropped and re-created with the correct schema.\")\n"
    ]
   },
   {
@@ -720,18 +722,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 09:05:10 WARN TaskSetManager: Stage 0 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "25/11/26 09:05:15 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 0 (TID 0): Attempting to kill Python Worker\n",
-      "25/11/26 09:05:15 WARN TaskSetManager: Stage 1 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "25/11/26 09:05:31 WARN TaskSetManager: Stage 2 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "25/11/26 09:05:34 WARN TaskSetManager: Stage 5 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n"
+      "25/11/26 11:16:05 WARN TaskSetManager: Stage 0 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/26 11:16:10 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 0 (TID 0): Attempting to kill Python Worker\n",
+      "25/11/26 11:16:10 WARN TaskSetManager: Stage 1 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/26 11:16:25 WARN TaskSetManager: Stage 2 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/26 11:16:28 WARN TaskSetManager: Stage 5 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n"
      ]
     },
     {
@@ -746,10 +748,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 09:05:38 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 5 (TID 18): Attempting to kill Python Worker\n",
-      "25/11/26 09:05:38 WARN TaskSetManager: Stage 6 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "25/11/26 09:05:51 WARN TaskSetManager: Stage 7 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "[Stage 7:=======>                                                   (1 + 7) / 8]\r"
+      "25/11/26 11:16:32 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 5 (TID 18): Attempting to kill Python Worker\n",
+      "25/11/26 11:16:32 WARN TaskSetManager: Stage 6 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/26 11:16:46 WARN TaskSetManager: Stage 7 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "[Stage 7:>                                                          (0 + 8) / 8]\r"
      ]
     },
     {
@@ -805,14 +807,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Connected to MongoDB database 'elhub_db'.\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 09:05:53 WARN TaskSetManager: Stage 10 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n"
+      "25/11/26 11:18:41 WARN TaskSetManager: Stage 10 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/26 11:18:45 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 10 (TID 36): Attempting to kill Python Worker\n",
+      "25/11/26 11:18:45 WARN TaskSetManager: Stage 11 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n"
      ]
     },
     {
@@ -820,43 +832,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--- CRITICAL CHECK: Production DF Columns ---\n"
+      "--- Starting Ingestion for Production into collection 'production' ---\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 09:05:57 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 10 (TID 36): Attempting to kill Python Worker\n",
-      "25/11/26 09:05:57 WARN TaskSetManager: Stage 11 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Production DF Columns (Target for MongoDB): ['productiongroup', 'pricearea', 'starttime', 'endtime', 'quantitykwh', 'lastupdatedtime']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/11/26 09:05:58 WARN TaskSetManager: Stage 14 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Production DF Count: 657600\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/11/26 09:06:02 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 14 (TID 46): Attempting to kill Python Worker\n",
       "                                                                                \r"
      ]
     },
@@ -864,15 +846,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Connected to MongoDB collection 'production'.\n"
+      "Cleared existing documents in MongoDB collection 'production'.\n",
+      "Inserted 657600 Production records.\n",
+      "Total documents in collection: 657600\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 09:06:03 WARN TaskSetManager: Stage 15 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/26 11:23:16 WARN TaskSetManager: Stage 12 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/26 11:23:20 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 12 (TID 45): Attempting to kill Python Worker\n",
+      "25/11/26 11:23:20 WARN TaskSetManager: Stage 13 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Starting Ingestion for Consumption into collection 'consumption_hourly' ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "                                                                                \r"
      ]
     },
@@ -880,13 +879,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cleared existing documents in MongoDB collection.\n",
-      "\n",
-      "Inserted 657600 Production records (2021-2024).\n",
-      "Total documents in collection: 657600\n",
-      "\n",
-      "Sample document from MongoDB:\n",
-      "{'_id': ObjectId('6926b5a28e7dfcb511231052'), 'productiongroup': 'hydro', 'pricearea': 'NO1', 'starttime': datetime.datetime(2022, 1, 1, 0, 0), 'endtime': datetime.datetime(2022, 1, 1, 1, 0), 'quantitykwh': 1291422.4, 'lastupdatedtime': datetime.datetime(2025, 2, 1, 18, 2, 57)}\n",
+      "Cleared existing documents in MongoDB collection 'consumption_hourly'.\n",
+      "Inserted 876600 Consumption records.\n",
+      "Total documents in collection: 876600\n",
       "\n",
       "Spark session stopped. All ingestion complete.\n"
      ]
@@ -895,64 +890,56 @@
    "source": [
     "### 5. MongoDB Ingestion and Final Cleanup\n",
     "\n",
-    "# --- CRITICAL CHECK: Columns of Production Data (what Streamlit needs) ---\n",
-    "# This block confirms that the DataFrame we are about to insert has the necessary column.\n",
-    "print(\"\\n--- CRITICAL CHECK: Production DF Columns ---\")\n",
-    "# Check if the full production DF exists and is not empty\n",
-    "if 'production_spark_df_full' in locals() and not production_spark_df_full.isEmpty():\n",
-    "    print(\"Production DF Columns (Target for MongoDB):\", production_spark_df_full.columns)\n",
-    "    print(\"Production DF Count:\", production_spark_df_full.count())\n",
-    "    mongo_target_df = production_spark_df_full\n",
-    "    data_type_label = \"Production\"\n",
+    "# 5.1 Connect to MongoDB\n",
+    "if not MONGO_URI:\n",
+    "    print(\"\\nMongoDB ingestion skipped (MONGO_URI not loaded).\")\n",
     "else:\n",
-    "    print(\"ERROR: production_spark_df_full is empty or missing. Cannot insert data needed for Production page.\")\n",
-    "    mongo_target_df = spark.createDataFrame([], schema=None) # Empty DF to safely skip ingestion\n",
-    "    data_type_label = \"Error_Empty\"\n",
-    "# -------------------------------------------------------------------------\n",
-    "\n",
-    "\n",
-    "# Requirement: Load the full PRODUCTION data (2021-2024) into the main MongoDB collection.\n",
-    "# This ensures the Streamlit Production page has the correct dataset.\n",
-    "if MONGO_URI and not mongo_target_df.isEmpty():\n",
-    "    \n",
-    "    # 5.1 Connect to MongoDB\n",
     "    client = MongoClient(MONGO_URI)\n",
     "    db = client[MONGO_DB]\n",
-    "    collection = db[MONGO_COLLECTION]\n",
-    "    print(f\"\\nConnected to MongoDB collection '{MONGO_COLLECTION}'.\")\n",
+    "    print(f\"\\nConnected to MongoDB database '{MONGO_DB}'.\")\n",
     "\n",
-    "    # 5.2 Convert Spark DataFrame back to Pandas for MongoDB insertion\n",
-    "    # We use the full Production DF which includes 'productiongroup'\n",
-    "    mongo_pandas_df = mongo_target_df.toPandas()\n",
-    "    \n",
-    "    # Convert time columns to Python datetime objects for BSON compliance\n",
-    "    for col_name in ['starttime', 'endtime', 'lastupdatedtime']:\n",
-    "        if col_name in mongo_pandas_df.columns:\n",
-    "            # Use .apply() to safely convert timestamps to datetime objects\n",
-    "            mongo_pandas_df[col_name] = mongo_pandas_df[col_name].apply(\n",
-    "                lambda x: x.to_pydatetime() if pd.notna(x) else None\n",
-    "            )\n",
-    "            \n",
-    "    # Convert to a list of dictionaries (BSON documents)\n",
-    "    records = mongo_pandas_df.to_dict(\"records\")\n",
+    "    def ingest_to_mongo(spark_df, collection_name, data_type_label):\n",
+    "        \"\"\"Helper function to convert Spark DF to Pandas and ingest into a specific MongoDB collection.\"\"\"\n",
+    "        if spark_df.isEmpty():\n",
+    "            print(f\"Skipped {data_type_label} Ingestion: Spark DataFrame is empty.\")\n",
+    "            return\n",
     "\n",
-    "    # 5.3 Clear existing data and insert the new Production data\n",
-    "    collection.delete_many({})\n",
-    "    print(\"Cleared existing documents in MongoDB collection.\")\n",
-    "    \n",
-    "    # Insert the new, comprehensive Production data\n",
-    "    result = collection.insert_many(records)\n",
+    "        # Get the target collection instance\n",
+    "        collection = db[collection_name]\n",
+    "        print(f\"\\n--- Starting Ingestion for {data_type_label} into collection '{collection_name}' ---\")\n",
+    "        \n",
+    "        # Convert Spark DataFrame back to Pandas\n",
+    "        mongo_pandas_df = spark_df.toPandas()\n",
+    "        \n",
+    "        # Convert time columns to Python datetime objects for BSON compliance\n",
+    "        for col_name in ['starttime', 'endtime', 'lastupdatedtime']:\n",
+    "            if col_name in mongo_pandas_df.columns:\n",
+    "                mongo_pandas_df[col_name] = mongo_pandas_df[col_name].apply(\n",
+    "                    lambda x: x.to_pydatetime() if pd.notna(x) else None\n",
+    "                )\n",
+    "                \n",
+    "        # Convert to a list of dictionaries (BSON documents)\n",
+    "        records = mongo_pandas_df.to_dict(\"records\")\n",
     "\n",
-    "    print(f\"\\nInserted {len(result.inserted_ids)} {data_type_label} records (2021-2024).\")\n",
-    "    print(f\"Total documents in collection: {collection.count_documents({})}\")\n",
-    "    print(\"\\nSample document from MongoDB:\")\n",
-    "    print(collection.find_one())\n",
-    "    \n",
-    "else:\n",
-    "    print(\"\\nMongoDB ingestion skipped (URI not loaded or target data is empty).\")\n",
-    "    \n",
+    "        # Clear existing data and insert the new data\n",
+    "        collection.delete_many({})\n",
+    "        print(f\"Cleared existing documents in MongoDB collection '{collection_name}'.\")\n",
+    "        \n",
+    "        # Insert the new data\n",
+    "        result = collection.insert_many(records)\n",
+    "        print(f\"Inserted {len(result.inserted_ids)} {data_type_label} records.\")\n",
+    "        print(f\"Total documents in collection: {collection.count_documents({})}\")\n",
+    "        \n",
+    "    # --- INGESTION 1: PRODUCTION DATA ---\n",
+    "    # Writes the production data to the MONGO_COLLECTION (e.g., \"production\")\n",
+    "    ingest_to_mongo(production_spark_df_full, MONGO_COLLECTION, \"Production\")\n",
+    "\n",
+    "    # --- INGESTION 2: CONSUMPTION DATA ---\n",
+    "    # Writes the consumption data to the new MONGO_CONSUMPTION_COLLECTION (e.g., \"consumption_hourly\")\n",
+    "    ingest_to_mongo(consumption_spark_df, MONGO_CONSUMPTION_COLLECTION, \"Consumption\")\n",
+    "\n",
+    "\n",
     "### 6. Final Cleanup\n",
-    "\n",
     "# Stop Spark Session\n",
     "try:\n",
     "    spark.stop()\n",
