--- a/jupyter/assignment_4.ipynb
+++ b/jupyter/assignment_4.ipynb
@@ -7,7 +7,7 @@
     "# IND320 - Data to Decision\n",
     "**Student:** Sofie Lauvås\n",
     "\n",
-    "**Project:** Data Update and Consumption Data Acquisition\n",
+    "**Project:** Machine Learning\n",
     "\n",
     "**GitHub Repository:** https://github.com/sofielauvaas/IND320_sofielauvaas_project\n",
     "\n",
@@ -962,14 +962,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Log"
+    "### Log\n",
+    "This final project has been very demanding. I usually expect a lot from myself, but this has truly been exhausting. I began working on it last week just by experimenting a little, and ended up spending all hours on it throughout the week.\n",
+    "\n",
+    "The first major challenge was reading the data into MongoDB. When I finally thought I had finished the notebook, it ended up crashing my entire page before I had even modified anything. I spent two full days trying to find the root cause—getting closer, but never quite close enough. The issue turned out to be related to collections and incorrectly referenced groups, which the page was unable to handle properly.\n",
+    "\n",
+    "As I continued developing, more issues appeared, most of them tracing back to small mistakes in the data ingestion step. These took an enormous amount of time to identify and correct. Even after fixing the main problem, I kept getting new errors, which I later discovered were caused simply by caching. I faced many obstacles, learned a lot, and often felt frustrated. I really tried to understand and solve things myself rather than relying on AI for everything—and that definitely takes more time. I also learned that AI doesn’t always give the right answer, so I had to work things out on my own. I faced numerous errors while combining datasets and building the pipelines.\n",
+    "\n",
+    "During the analysis phase, the SWC analysis showed that colder temperatures lead to higher energy consumption, higher wind speeds increase production, and using bigger time windows produces more stable forecasts.\n",
+    "\n",
+    "If I had more time, I would revisit the SARIMAX model. I’m not convinced it’s correct. I spent hours trying to get it to work without success and eventually received help from peers. I wanted to personalize that part more, but the logic wasn’t easily transferable. No matter how many hours I put in, I still couldn’t get it right.\n",
+    "\n",
+    "With more time, I would also refine the aesthetics, clean up comments, and tidy the code. I would also spend more time doing the bonus assignments, as I only had time to do the chaching with spinners, and som error handling.\n",
+    " \n",
+    "This project has been very challenging. But on the positive side, I have learned a great deal"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### AI Usage"
+    "### AI Usage\n",
+    "Gemini, copilot and ChatGPT served as an essential codevelopment and strategic debugging partner to overcome major technical barriers. The AI's key role was resolving complex, recurring indexing and caching failures, debugging database problems, help with devolping code, rewriting my suggestions, ensuring the final analytical structure was robust, compliant, and accelerated the overall project delivery."
    ]
   }
  ],
