--- a/jupyter/assignment_4.ipynb
+++ b/jupyter/assignment_4.ipynb
@@ -248,7 +248,7 @@
     "print(\"Verification Data Read by Spark:\")\n",
     "df_test.show()\n",
     "\n",
-    "# Cleanup: Drop the temporary table to keep the keyspace clean for A4 tables\n",
+    "# Drop the temporary table to keep the keyspace clean for A4 tables\n",
     "session.execute(f\"DROP TABLE {test_table_name};\")\n",
     "print(f\"Cleaned up temporary table: {test_table_name}\")"
    ]
@@ -331,7 +331,6 @@
     "    # Base URL for the Norwegian Elhub API\n",
     "    BASE_URL = f\"https://api.elhub.no/energy-data/v0/{ENTITY}?dataset={dataset_name}&startDate={{}}&endDate={{}}\"\n",
     "    \n",
-    "    # Determine the expected key in the JSON response (e.g., 'consumptionPerGroupMbaHour')\n",
     "    # Convert the snake_case constant to camelCase to find the nested list in the response\n",
     "    list_key = \"\".join(word.capitalize() for word in dataset_name.lower().split('_'))\n",
     "    list_key = list_key[0].lower() + list_key[1:]\n",
@@ -345,7 +344,6 @@
     "        for start_date, end_date in monthly_ranges:\n",
     "            url = BASE_URL.format(start_date, end_date)\n",
     "            \n",
-    "            # --- CRITICAL CHANGE: NO API KEY HEADER USED HERE ---\n",
     "            response = requests.get(url)\n",
     "            \n",
     "            if response.status_code == 200:\n",
@@ -613,7 +611,6 @@
     "               )\n",
     "    \n",
     "    # Select final columns based on data type for the respective Cassandra tables\n",
-    "    # NOTE: meteringpointcount is included here now.\n",
     "    base_cols = ['pricearea', 'starttime', 'endtime', 'quantitykwh', 'lastupdatedtime', 'meteringpointcount']\n",
     "    \n",
     "    if data_type == 'production':\n",
@@ -685,11 +682,11 @@
     "production_table_name = \"production_hourly\"\n",
     "consumption_table_name = \"consumption_hourly\"\n",
     "\n",
-    "# --- CRITICAL FIX: Explicitly drop old tables to ensure the new schema is used ---\n",
+    "# Explicitly drop old tables to ensure the new schema is used \n",
     "session.execute(f\"DROP TABLE IF EXISTS {keyspace_name}.production_2021;\")\n",
     "session.execute(f\"DROP TABLE IF EXISTS {keyspace_name}.{production_table_name};\")\n",
     "session.execute(f\"DROP TABLE IF EXISTS {keyspace_name}.{consumption_table_name};\")\n",
-    "# ----------------------------------------------------------------------------------\n",
+    "\n",
     "\n",
     "\n",
     "# 3. Production Table: Re-create with the all-lowercase schema (Includes meteringpointcount)\n",
@@ -780,10 +777,9 @@
    ],
    "source": [
     "#### 4.3 Ingestion into Cassandra (Full Dataset Write)\n",
-    "# Ingest Production Data (2021-2024 Full Dataset) - OVERWRITING\n",
+    "# Ingest Production Data (2021-2024 Full Dataset)\n",
     "# We use 'overwrite' because the full, combined dataset is ready and the table was just cleared.\n",
     "if 'production_spark_df_full' in locals() and not production_spark_df_full.isEmpty():\n",
-    "    # *** CRITICAL FIX: Add 'confirm.truncate' option to allow overwrite mode ***\n",
     "    production_spark_df_full.write\\\n",
     "        .format(\"org.apache.spark.sql.cassandra\") \\\n",
     "        .options(keyspace=keyspace_name, table=production_table_name, **{'confirm.truncate': True}) \\\n",
